--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "next-template",
-  "version": "0.0.2",
+  "name": "sound-of-dust",
+  "description": "Enjoy graphic & sound from real dust data",
+  "version": "0.1.0",
   "private": true,
+  "author": "kimaramy <fed.haram@gmail.com> (https://github.com/kimaramy)",
+  "homepage": "https://github.com/kimaramy/sound-of-dust",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,18 +14,28 @@
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "gen-types": "npx supabase gen types typescript --linked > domains/types/supabase.d.ts",
+    "gen-env": "cp .env.template .env.local"
   },
   "dependencies": {
+    "@lukemorales/query-key-factory": "^1.3.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.38.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "^0.105.0-alpha.4",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.287.0",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
+    "react-hot-toast": "^2.4.1",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -31,6 +44,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/node": "^17.0.45",
+    "@types/nprogress": "^0.2.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/parser": "^5.61.0",
@@ -43,6 +57,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
+    "type-fest": "^4.4.0",
     "typescript": "^4.9.5"
   }
 }
