--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.3.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.38.1",
     "@tanstack/react-query": "^4.36.1",
