--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sound-of-dust",
-  "description": "Enjoy graphic & sound from real dust data",
+  "description": "Enjoy graphics and sound generated from dust statistics data",
   "version": "0.1.0",
   "private": true,
   "author": "kimaramy <fed.haram@gmail.com> (https://github.com/kimaramy)",
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/lodash-es": "^4.17.10",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0.2.1",
     "@types/react": "^18.2.14",
@@ -58,6 +59,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1",
     "type-fest": "^4.4.0",
     "typescript": "^4.9.5"
   }
