--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "gsap": "^3.12.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.287.0",
     "next": "^13.4.8",
