--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0.2.1",
@@ -58,7 +58,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
     "type-fest": "^4.4.0",
