--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
+    "pagemap": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.2",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
