--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "gen-env": "cp .env.template .env.local"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
     "@lukemorales/query-key-factory": "^1.3.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.38.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
@@ -40,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
     "sharp": "^0.31.3",
@@ -49,6 +57,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^17.0.45",
