--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "tone": "^14.7.77",
     "zod": "^3.22.4"
   },
   "devDependencies": {
