map binary data to sound using tone.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sound-of-dust",
-  "description": "Enjoy graphics and sound generated from dust statistics data",
+  "description": "You can enjoy graphics and sounds generated from dust statistics data",
   "version": "0.1.0",
   "private": true,
   "author": "kimaramy <fed.haram@gmail.com> (https://github.com/kimaramy)",
