--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gsap": "^3.12.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.287.0",
+    "mobile-detect": "^1.4.5",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
