--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://github.com/kimaramy/sound-of-dust",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@next/bundle-analyzer": "^14.0.4",
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0.2.3",
