--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gen-env": "cp .env.template .env.local"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.2",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@json2csv/plainjs": "^7.0.4",
@@ -42,6 +43,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.287.0",
     "mobile-detect": "^1.4.5",
+    "negotiator": "^0.6.3",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -52,6 +54,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
+    "server-only": "^0.0.1",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
@@ -64,6 +67,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@next/bundle-analyzer": "^14.0.4",
     "@types/lodash-es": "^4.17.10",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.14",
