--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_SUPABASE_URL
 NEXT_PUBLIC_SUPABASE_ANON_KEY
-SEOUL_OPENAPI_TOKEN
-SEOUL_OPENAPI_ORIGIN
+SEOUL_OPENAPI_URL
+SEOUL_OPENAPI_KEY
