sort out jsx components into /components

--- a/lib/project.json
+++ b/lib/project.json
@@ -1,6 +1,6 @@
 {
   "title": "Signal from dust",
-  "description": "Signals and patterns found from PM10 and PM2.5 data",
+  "description": "Let's output the signals and patterns found from PM10 and PM2.5 data as audiovisual elements.",
   "keywords": [
     "PM10",
     "PM2.5",
