--- a/.env.local.template
+++ b/.env.local.template
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_SUPABASE_URL
-NEXT_PUBLIC_SUPABASE_ANON_KEY
-NEXT_PUBLIC_SEOUL_OPENAPI_URL
-NEXT_PUBLIC_SEOUL_OPENAPI_KEY
+SUPABASE_ACCESS_TOKEN
+SUPABASE_DATABASE_PASSWORD
+
+SEOUL_OPENAPI_URL
+SEOUL_OPENAPI_KEY
