--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@json2csv/plainjs": "^7.0.4",
     "@lukemorales/query-key-factory": "^1.3.2",
+    "@next/third-parties": "^14.1.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
